--- a/exercice1/index.html
+++ b/exercice1/index.html
@@ -7,48 +7,79 @@
     <title>Exercice1</title>
 
     <link rel="stylesheet" href="./css/bootstrap.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 
 <body>
 
     <div class="container">
-        <div class="container px-4">
-            <div class="row gx-5">
-                <div class="col">
-                    <div class="p-3 border bg-warning">YELLOW</div>
-                </div>
-                <div class="col">
-                    <div class="p-3 border bg-warning">YELLOW</div>
-                </div>
+        <div class="row ">
+            <div class="col-6">
+                <div class="yellow"></div>
+            </div>
+            <div class="col-6">
+                <div class="yellow"></div>
             </div>
         </div>
-        <div class="container">
-            <div class="row g-2">
-                <div class="col-3">
-                    <div class="p-3 border bg-primary">BLUE</div>
-                </div>
-                <div class="col-3">
-                    <div class="p-3 border bg-primary">BLUE</div>
-                </div>
-                <div class="col-3">
-                    <div class="p-3 border bg-primary">BLUE</div>
-                </div>
-                <div class="col-3">
-                    <div class="p-3 border bg-primary">BLUE</div>
-                </div>
+        <div class="row">
+            <div class="col-3">
+                <div class="blue"></div>
+            </div>
+            <div class="col-3">
+                <div class="blue"></div>
+            </div>
+            <div class="col-3">
+                <div class="blue"></div>
+            </div>
+            <div class="col-3">
+                <div class="blue"></div>
+            </div>
+        </div>
 
-                <div class="container">
-                    <div class="container px">
-                        <div class="row">
-                            <div class="col-3">
-                                <div class="p-9 border bg-danger">RED</div>
-                            </div>
-                            <div class="col-3">
-                                <div class="p-3 border bg-danger">RED</div>
-                            </div>
-                        </div>
+        <div class="row">
+            <div class="col-8">
+                <div class="red"></div>
+            </div>
+            <div class="col-4">
+                <div class="red"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="green"></div>
+            </div>
+            <div class="col-4">
+                <div class="green"></div>
+            </div>
+            <div class="col-4">
+                <div class="green"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="grey"></div>
+            </div>
+        </div>
+        <div class="row justify-content-end">
+            <div class="col-8">
+                <div class="yellow"></div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <div class="blue"></div>
+            </div>
+        </div>
+        <div class="row justify-content-between">
+            <div class="col-3">
+                <div class="red"></div>
+            </div>
+            <div class="col-3">
+                <div class="red"></div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
